fix: Configure Vercel deployment with optimized build
- Add vercel.json configuration for SPA routing
- Fix index.html to include module script reference
- Optimize vite.config.ts with code splitting (react-vendor, gemini, word-export)
- Add .nvmrc for Node.js version specification
- Update package.json with engines field and version bump to 1.0.0
- Add .env.example for environment variable template
- Enhance README.md with complete deployment instructions
- Add comprehensive DEPLOYMENT.md guide for Vercel
- Keep all existing features and functionality intact
- Build tested and working (dist outputs 4 optimized chunks)

--- a/index.html
+++ b/index.html
@@ -27,24 +27,9 @@
         background: #94a3b8; 
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "file-saver": "https://esm.sh/file-saver@2.0.5",
-    "jszip": "https://esm.sh/jszip@3.10.1",
-    "pizzip": "https://esm.sh/pizzip@3.1.4",
-    "docxtemplater": "https://esm.sh/docxtemplater@3.42.0"
-  }
-}
-</script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
