--- a/index.html
+++ b/index.html
@@ -32,4 +32,4 @@
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
-</html>
+</html><!-- Trigger Vercel deployment Sat Jan 17 16:42:12 UTC 2026 -->
