fix(exams): enforce standard math notation and proper HTML tables in exam/evaluation generation
- examGeminiService.ts:
  * Apply sanitizeExamContent() post-processing immediately after JSON parse so ALL
    LaTeX remnants (\frac, frac{}, ^{}, \sqrt, unicode superscripts, Markdown tables)
    are converted to standard notation before building the Exam object
  * Added global format rules at top of SYSTEM_INSTRUCTION_EXAM covering ALL subjects:
    - Fractions  → plain slash (4z/3 = 12)
    - Powers     → caret notation (x^2)
    - Roots      → sqrt() notation
    - Tables     → HTML <table border='1'> format (forbidden Markdown pipes)

- examWordExportService.ts:
  * Replaced convertLaTeXToText() with a full sanitizeMathText-compatible version:
    - Fractions: \frac{a}{b} → a/b  (no more x² / Unicode exponents)
    - Powers: keeps caret notation (x^2) instead of converting to Unicode x²
    - Roots: \sqrt{x} → sqrt(x)
    - Unicode superscripts (x², x³) → caret (x^2, x^3)
  * Added convertMarkdownTableToPlainText() for Word: converts pipe-tables to readable text
  * Added stripHTMLTablesForWord(): converts <table> HTML to plain-text rows for .docx
  * Added prepareTextForWord() helper that chains all three transformations
  * All formatQuestion / formatQuestionWithCorrection calls now use prepareTextForWord()

- components/ExamsWizard.tsx:
  * Preview content now uses dangerouslySetInnerHTML to correctly render HTML tables
    and line breaks instead of raw text with whitespace-pre-wrap

- index.html:
  * Added .exam-preview-content CSS rules: bordered tables with header styling
    so HTML tables display correctly in the exam preview panel

--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #94a3b8; 
       }
+      /* Exam preview: render HTML tables with proper borders */
+      .exam-preview-content table {
+        border-collapse: collapse;
+        width: 100%;
+        margin: 12px 0;
+        font-size: 0.875rem;
+      }
+      .exam-preview-content table th,
+      .exam-preview-content table td {
+        border: 1px solid #475569;
+        padding: 6px 10px;
+        text-align: left;
+      }
+      .exam-preview-content table th {
+        background-color: #e2e8f0;
+        font-weight: 600;
+      }
+      .exam-preview-content table tr:nth-child(even) td {
+        background-color: #f8fafc;
+      }
     </style>
   </head>
   <body>
